data/all_generated_tests/raw_wast_tests/block_EdgeCaseFailuresinbr_table_8.wast
;; 9. **Test with Dynamic Operand on `br_table` Index**:    - Use dynamic values from stack to index into the `br_table` inside a block.    - *Constraint*: Ensures dynamic operand stack operations correctly resolve indices.    - *Relation*: Tests if both implementations dynamically evaluate and handle label stack shifts correctly with runtime indices from the stack.

(assert_invalid
  (module 
    (func $test-br-table-dynamic-operand 
      (block 
        (block (br_table 0 1 (i32.const 1))) 
        (nop)
      )
    )
  )
  "invalid br_table or index"
)